--- a/app.css
+++ b/app.css
@@ -1,6 +1,6 @@
 body {
     overflow: auto;
-    background-color: #303030;
+    background-image: url("https://www.shutterstock.com/blog/wp-content/uploads/sites/5/2020/07/shutterstock_582803470.jpg?w=750");
 }
 
 .row {
