--- a/app.css
+++ b/app.css
@@ -177,5 +177,21 @@ h4 {
     height: 14px;
     margin-bottom: 2px;
 }
-
+.loader {
+    margin-top: 23px;
+    border: 16px solid red;
+    border-radius: 50%;
+    border-top: 16px solid  black;
+    width: 20px;
+    height: 20px;
+    background-color:green;
+    -webkit-animation: spin 2s linear infinite; /* Safari */ 
+    animation: spin 2s linear infinite;
+  }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
 
